--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,10 +5,28 @@
 
   <!-- Main Content -->
   <main class="container">
+  <div class="row">
+  <div class="col">
+
     <div class="jumbotron">
-      <h1 class="display-4">Welcome to the <%= title %> page</h1>
-      
+      <h1 class="display-4">Welcome to my <%= title %> page</h1>
+  </div>
+</div>
     </div>
+
+    <div class="row row justify-content-md-center">
+  <div class="col-6">
+<h2 class="display-5">Welcome to my <%= title %> page </h2>
+      <hr class="my-4">
+     <p> Welcome to James Kuzhilaparambil page. My goal is to learn and experience new things every day. Make good use of time management.</p></h4> 
+<li><a href="http://studentweb.cencol.ca/jkuzhila/">Link to my projects</a>
+<ul>Real estate website</ul>
+<ul>Bug Smasher</ul>
+<ul>Ninja smoothie ad page</ul>
+</li>
+  </div>
+
+  </div>
   </main>
   
 <%- include partials/bottom_nav.ejs %>  
