--- a/views/partials/main_nav.ejs
+++ b/views/partials/main_nav.ejs
@@ -1,10 +1,11 @@
 <!-- Main Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="/">COMP229</a>
+    <a class="navbar-brand" href="/">Portfolio</a>
+    
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-  
+  <img src= "https://dummyimage.com/100x100/000000/eeff00.jpg&text=stay+safe" alt= "Logo"/>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
 
@@ -24,12 +25,12 @@
           <a class="nav-link" href="/about"><i class="fas fa-info-circle"></i> About </a>
         </li>
 
-        <% if (title == "Products") { %>
+        <% if (title == "Projects") { %>
         <li class="nav-item active">
         <% } else  { %>
         <li class="nav-item">
         <% } %>
-          <a class="nav-link" href="/products"><i class="fab fa-elementor"></i> Products </a>
+          <a class="nav-link" href="/projects"><i class="fab fa-elementor"></i> Projects </a>
         </li>
 
         <% if (title == "Services") { %>
