--- a/public/Content/app.css
+++ b/public/Content/app.css
@@ -1,1 +1,12 @@
-/* custom css goes here */
+/* James Kuzhilaparambil Id:301119040  date 10/09/2020 */
+
+body {
+    background-color: #e7fc03;
+}
+
+
+
+
+li {
+    display: inline;
+}
