--- a/public/Content/app.css
+++ b/public/Content/app.css
@@ -1,7 +1,9 @@
 /* James Kuzhilaparambil Id:301119040  date 10/09/2020 */
 
-body {
+
+body { 
     background-color: #e7fc03;
+    padding-bottom: 60px; 
 }
 
 
